--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   -webkit-user-select: none;
   user-select: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 html, body {
@@ -11,7 +12,7 @@ html, body {
   color: #fff;
   height: 100%;
   overscroll-behavior: none;
-  touch-action: none;
+  touch-action: manipulation;
 }
 
 #app {
@@ -62,6 +63,10 @@ html, body {
 
   min-width: 0;
   padding: 0;
+}
+
+#map, button {
+  touch-action: manipulation;
 }
 
 #side {
